// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swapExecuted updates an existing swap with the execution timestamp 1`] = `
{
  "createdAt": Any<Date>,
  "depositAmount": "10000000000",
  "depositReceivedAt": 2022-12-06T14:31:33.000Z,
  "depositReceivedBlockIndex": "100-0",
  "destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX",
  "destAsset": "DOT",
  "egressAmount": "10000000000",
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 9876545n,
  "srcAsset": "ETH",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": 2022-12-06T14:31:39.000Z,
  "swapExecutedBlockIndex": "100-0",
  "txHash": null,
  "updatedAt": Any<Date>,
}
`;

exports[`swapExecuted updates an existing swap with the execution timestamp and intermediate amount 1`] = `
{
  "createdAt": Any<Date>,
  "depositAmount": "10000000000",
  "depositReceivedAt": 2022-12-06T14:31:33.000Z,
  "depositReceivedBlockIndex": "100-0",
  "destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX",
  "destAsset": "DOT",
  "egressAmount": "10000000000",
  "id": Any<BigInt>,
  "intermediateAmount": "100000",
  "nativeId": 9876545n,
  "srcAsset": "ETH",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": 2022-12-06T14:31:39.000Z,
  "swapExecutedBlockIndex": "100-0",
  "txHash": null,
  "updatedAt": Any<Date>,
}
`;
